--- a/css/style.css
+++ b/css/style.css
@@ -90,26 +90,165 @@ legend {
 
 /*------------------------------------*/
 @font-face {
-  font-family: "AlfaSlabOne";
-  src: url("./../fonts/AnyConv.com__AlfaSlabOne-Regular-OTF.woff") format("woff");
+  font-family: "AlfaS lab One";
+  src: url("./../fonts/AnyConv.com__AlfaSlabOne-Regular.woff") format("woff"), url("./../fonts/AnyConv.com__AlfaSlabOne-Regular.woff2") format("woff2");
   font-display: swap;
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
-  font-family: "BebasNeueRegular";
-  src: url("./../fonts/BebasNeueRegular.woff") format("woff");
+  font-family: "Bebas Neue";
+  src: url("./../fonts/AnyConv.com__BebasNeue-Regular.woff") format("woff"), url("./../fonts/AnyConv.com__BebasNeue-Regular.woff2") format("woff2");
   font-display: swap;
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
-  font-family: "BbasNeueeBold";
-  src: url("./../fonts/BebasNeueRegular.woff") format("woff");
+  font-family: "Bbas Neuee";
+  src: url("./../fonts/AnyConv.com__ofont.ru_Bebas Neue.woff") format("woff"), url("./../fonts/AnyConv.com__ofont.ru_Bebas Neue.woff2") format("woff");
   font-display: swap;
   font-style: normal;
   font-weight: 700;
 }
 .none {
   display: none !important;
+}
+
+body {
+  background-color: #ccc;
+}
+
+.container {
+  max-width: 1470px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.nav__row {
+  max-width: 1330px;
+  width: 100%;
+  background-color: #bdecc8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.logo__img {
+  cursor: pointer;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  margin-top: -7px;
+}
+.logo__img:hover:hover {
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.nav__row-info {
+  margin-top: 4px;
+}
+
+.row-info__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  font-family: "Montserrat";
+  color: rgb(61, 37, 20);
+  font-weight: bold;
+  line-height: 5;
+  letter-spacing: -0.05rem;
+  text-align: right;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.info__top-img {
+  cursor: pointer;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.info__top-img:hover {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.top__span {
+  letter-spacing: 0.03rem;
+}
+
+.top__num {
+  color: rgb(61, 37, 20);
+  letter-spacing: -0.04rem;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.top__num:hover {
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
+  color: blue;
+}
+
+.row-info__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.nav__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 56px;
+}
+
+.nav__link {
+  font-size: 21px;
+  font-family: "Bebas Neue";
+  letter-spacing: 0.22rem;
+  color: rgb(61, 37, 20);
+  text-transform: uppercase;
+}
+
+@media (max-width: 1440px) {
+  .row-info__top {
+    line-height: 5.1;
+    gap: 8px;
+  }
+  .top__span {
+    letter-spacing: -0.01rem;
+  }
+  .row-info__bottom {
+    margin-top: -3px;
+  }
+  .nav__menu {
+    gap: 57px;
+  }
+}
+@media (max-width: 1200px) {
+  .nav__menu {
+    gap: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .nav__row-info {
+    display: none;
+  }
 }
