--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,28 +3,161 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700);
 
 @font-face {
-	font-family: "AlfaSlabOne";
-	src: url("./../fonts/AnyConv.com__AlfaSlabOne-Regular-OTF.woff") format("woff");
-	font-display: swap;
-	font-style: normal;
-	font-weight: 400;
+  font-family: "AlfaS lab One";
+  src: url("./../fonts/AnyConv.com__AlfaSlabOne-Regular.woff") format("woff"),
+    url("./../fonts/AnyConv.com__AlfaSlabOne-Regular.woff2") format("woff2");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
 }
 
 @font-face {
-	font-family: "BebasNeueRegular";
-	src: url("./../fonts/BebasNeueRegular.woff") format("woff");
-	font-display: swap;
-	font-style: normal;
-	font-weight: 400;
+  font-family: "Bebas Neue";
+  src: url("./../fonts/AnyConv.com__BebasNeue-Regular.woff") format("woff"),
+    url("./../fonts/AnyConv.com__BebasNeue-Regular.woff2") format("woff2");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
 }
 
 @font-face {
-	font-family: "BbasNeueeBold";
-	src: url("./../fonts/BebasNeueRegular.woff") format("woff");
-	font-display: swap;
-	font-style: normal;
-	font-weight: 700;
+  font-family: "Bbas Neuee";
+  src: url("./../fonts/AnyConv.com__ofont.ru_Bebas\ Neue.woff") format("woff"),
+    url("./../fonts/AnyConv.com__ofont.ru_Bebas\ Neue.woff2") format("woff");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 700;
 }
+
 .none {
-	display: none !important;
+  display: none !important;
+}
+
+body {
+  background-color: #ccc;
+}
+
+.container {
+  max-width: 1470px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+//------------ NAV -----------------------
+
+.nav {}
+
+.nav__row {
+  max-width: 1330px;
+  width: 100%;
+  background-color: #bdecc8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.nav__row-logo {}
+
+.logo__img {
+  cursor: pointer;
+  transition: .3s ease;
+  margin-top: -7px;
+
+  &:hover {
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+}
+
+.nav__row-info {
+  margin-top: 4px;
+}
+
+.row-info__top {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-size: 16px;
+  font-family: "Montserrat";
+  color: rgb(61, 37, 20);
+  font-weight: bold;
+  line-height: 5;
+  letter-spacing: -.05rem;
+  text-align: right;
+  justify-content: end;
+}
+
+.info__top-img {
+  cursor: pointer;
+  transition: .3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.top__span {
+  letter-spacing: .03rem;
+}
+
+.top__num {
+  color: rgb(61, 37, 20);
+  letter-spacing: -.04rem;
+  transition: .3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+    color: blue;
+  }
+}
+
+.row-info__bottom {
+  display: flex;
+}
+
+.nav__menu {
+  display: flex;
+  gap: 56px;
+}
+
+.nav__item {}
+
+.nav__link {
+  font-size: 21px;
+  font-family: "Bebas Neue";
+  letter-spacing: .22rem;
+  color: rgb(61, 37, 20);
+  text-transform: uppercase;
+}
+
+@media (max-width: 1440px) {
+  .row-info__top {
+    line-height: 5.1;
+    gap: 8px;
+  }
+
+  .top__span {
+    letter-spacing: -.01rem;
+  }
+.row-info__bottom { 
+  margin-top: -3px;
+}
+.nav__menu {
+  gap: 57px;
+}
+}
+@media (max-width: 1200px) {
+  .nav__menu {
+  gap: 50px;
+}
+}
+
+@media (max-width: 768px) {
+.nav__row-info {
+display: none;
+}
 }
