--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ legend {
 
 /*------------------------------------*/
 @font-face {
-  font-family: "AlfaS lab One";
+  font-family: "Alfa Slab One";
   src: url("./../fonts/AnyConv.com__AlfaSlabOne-Regular.woff") format("woff"), url("./../fonts/AnyConv.com__AlfaSlabOne-Regular.woff2") format("woff2");
   font-display: swap;
   font-style: normal;
@@ -954,5 +954,309 @@ body.lock {
   }
   .burgers-others {
     gap: 20px;
+  }
+}
+.chooce__content {
+  height: 990px;
+  margin-top: -24px;
+  padding-top: 24px;
+  background-color: #fff;
+}
+
+.choce__top {
+  text-align: center;
+}
+
+.chooce__subtitle {
+  margin-top: 19px;
+}
+
+.subtitle-img {
+  max-width: 100%;
+}
+
+.choce-title {
+  font-size: 50px;
+  font-family: "Alfa Slab One";
+  color: rgb(61, 37, 20);
+  text-transform: uppercase;
+  line-height: 0.75;
+  margin-top: 44px;
+}
+
+.suptitle-txt {
+  max-width: 1070px;
+  font-size: 16px;
+  font-family: "Montserrat";
+  color: rgb(61, 37, 20);
+  line-height: 1.81;
+  margin: 22px auto;
+  text-align: center;
+}
+
+.chooce__inner {
+  margin-top: 63px;
+}
+
+.inner-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 154px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.inner-row__column {
+  text-align: center;
+  max-width: 23rem;
+}
+
+.inner-row__column--m {
+  text-align: center;
+  position: relative;
+  left: -77px;
+}
+
+.shadow {
+  margin-top: 5px;
+  margin-left: 15px;
+}
+
+.column-title {
+  font-size: 37px;
+  font-family: "Bebas Neue";
+  color: rgb(61, 37, 20);
+  text-transform: uppercase;
+  line-height: 1;
+  margin-top: 29px;
+}
+
+.column-title1 {
+  margin-left: 22px;
+}
+
+.column-title3 {
+  margin-left: 53px;
+}
+
+.column__suptitle {
+  max-width: 355px;
+  font-size: 17px;
+  font-family: "Montserrat";
+  color: rgb(61, 37, 20);
+  line-height: 1.3;
+  text-align: center;
+  margin-top: 12px;
+  margin-left: 20px;
+}
+
+.column__suptitle1 {
+  margin-left: 28px;
+}
+
+.column__suptitle2 {
+  margin-left: 6px;
+}
+
+.column__suptitle1 {
+  min-width: 23rem;
+  margin-left: 9px;
+  letter-spacing: -0.015rem;
+}
+
+.column__suptitle3 {
+  min-width: 23rem;
+  margin-left: 26px;
+}
+
+.order-img {
+  font-size: 17px;
+  font-family: "AlfaSlabOne";
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  line-height: 2.25;
+  background-color: rgb(191, 34, 34);
+  width: 195px;
+  height: 57px;
+  z-index: 1;
+  margin-top: 35px;
+}
+
+.order-img1 {
+  margin-left: 23px;
+}
+
+.order-img2 {
+  margin-left: 1px;
+}
+
+.order-img3 {
+  margin-left: 58px;
+}
+
+@media (max-width: 1440px) {
+  .chooce__content {
+    height: 990px;
+    height: auto;
+    padding-bottom: 70px;
+  }
+  .chooce__inner {
+    margin-top: 64px;
+  }
+  .suptitle-txt {
+    letter-spacing: 0.01rem;
+  }
+  .column-title1 {
+    margin-left: 18px;
+  }
+  .column-title3 {
+    margin-left: 55px;
+  }
+  .order-img {
+    margin-top: 34px;
+  }
+  .order-img1 {
+    margin-left: 19px;
+  }
+  .order-img3 {
+    margin-left: 58px;
+  }
+}
+@media (max-width: 1420px) {
+  .inner-row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 300px;
+  }
+  .inner-row__column--m {
+    margin-top: -180px;
+    margin-left: 150px;
+  }
+}
+@media (max-width: 1420px) and (max-width: 1068px) {
+  .inner-row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 200px;
+  }
+  .inner-row__column--m {
+    margin-top: -100px;
+  }
+}
+@media (max-width: 990px) {
+  .subtitle-img {
+    width: 20%;
+  }
+  .choce-title {
+    font-size: 45px;
+  }
+  .suptitle-txt {
+    max-width: 800px;
+    font-size: 15px;
+  }
+  .inner-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 90px;
+  }
+  .inner-row__column--m {
+    margin-top: 0;
+  }
+  .column-title {
+    font-size: 34px;
+  }
+  .column__suptitle {
+    max-width: 300px;
+    font-size: 16px;
+  }
+  .order-img {
+    font-size: 16px;
+    height: 57px;
+    width: 180px;
+    height: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .choce-title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 575px) {
+  .subtitle-img {
+    width: 33%;
+  }
+}
+@media (max-width: 480px) {
+  .subtitle-img {
+    width: 38%;
+  }
+  .chooce__inner {
+    margin-top: 63px;
+  }
+  .inner-row {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .column-img {
+    width: 75%;
+  }
+  .inner-row__column--m {
+    margin-left: 115px;
+  }
+}
+@media (max-width: 424px) {
+  .choce-title {
+    font-size: 30px;
+    margin-top: 35px;
+  }
+}
+@media (max-width: 320px) {
+  .suptitle-txt {
+    padding: 0 20px;
+  }
+  .inner-row {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 80px;
+  }
+  .subtitle-img {
+    width: 55%;
+  }
+  .choce-title {
+    font-size: 27px;
+  }
+  .inner-row__column {
+    margin-left: -110px;
+  }
+  .inner-row__column--m {
+    margin-left: 40px;
+  }
+  .column-title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  .column__suptitle {
+    max-width: 450px;
+    font-size: 15px;
+    margin: 0 auto;
+    padding: 0 50px;
+  }
+  .order-img {
+    font-size: 15px;
+    width: 160px;
+    height: 50px;
+    margin-left: 20px;
   }
 }
