--- a/scss/style.scss
+++ b/scss/style.scss
@@ -913,11 +913,6 @@ body {
 }
 
 //----------- CHOOSE ------------------
-.choce {
-
-
-}
-
 .chooce__content {
   height: 990px;
     margin-top: -24px;
@@ -926,9 +921,7 @@ body {
 }
 
 .choce__top {
-
   text-align: center;
-
 }
 
 .chooce__subtitle {
@@ -941,15 +934,12 @@ body {
 
 .choce-title {
   font-size: 50px;
-  //font-weight: 900;
   font-family: "Alfa Slab One";
   color: rgb(61, 37, 20);
   text-transform: uppercase;
   line-height: 0.75;
   margin-top: 44px;
 }
-
-.choce__suptitle {}
 
 .suptitle-txt {
   max-width: 1070px;
@@ -982,19 +972,12 @@ body {
   text-align: center;
   position: relative;
   left: -77px;
-  //top: -5px;
 }
-
-.column-img {}
 
 .shadow {
   margin-top: 5px;
   margin-left: 15px;
 }
-
-.shadow-img {}
-
-.shadow {}
 
 .column-title {
   font-size: 37px;
@@ -1043,8 +1026,6 @@ body {
   margin-left: 26px;
 }
 
-.column__order {}
-
 .order-img {
   font-size: 17px;
   font-family: "AlfaSlabOne";
@@ -1057,6 +1038,8 @@ body {
   height: 57px;
   z-index: 1;
   margin-top: 35px;
+
+  cursor: pointer;
 }
 
 .order-img1 {
@@ -1106,18 +1089,12 @@ body {
   .order-img3 {
     margin-left: 58px;
   }
-
 }
 
 @media (max-width: 1420px) {
   .inner-row {
-    //display: flex;
-    //justify-content: center;
-    //gap: 154px;
-    //align-items: flex-end;
     flex-wrap: wrap;
     gap: 300px;
-    //margin: 0 auto;
   }
 
   .inner-row__column--m {
@@ -1142,18 +1119,14 @@ body {
     width: 20%;
   }
 
-
   .choce-title {
     font-size: 45px;
   }
-
-  .choce__suptitle {}
 
   .suptitle-txt {
     max-width: 800px;
     font-size: 15px;
   }
-
 
   .inner-row {
     flex-direction: column;
@@ -1238,7 +1211,6 @@ body {
 
   .choce-title {
     font-size: 27px;
-    //margin-top: 35px;
   }
 
   .inner-row__column {
@@ -1248,7 +1220,6 @@ body {
   .inner-row__column--m {
     margin-left: 40px;
   }
-
 
   .column-title {
     font-size: 30px;
